Update of dependencies for native image